--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix = "0.13.3"
+dotenv = "0.15.0"
 env_logger = "0.11.2"
 lazy_static = "1.4.0"
 log = "0.4.21"
