--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 actix = "0.13.3"
 dotenv = "0.15.0"
 env_logger = "0.11.2"
+futures = "0.3.30"
 lazy_static = "1.4.0"
 log = "0.4.21"
 rand = "0.8.5"
