--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ env_logger = "0.11.2"
 futures = "0.3.30"
 lazy_static = "1.4.0"
 log = "0.4.21"
+moka = { version = "0.12.5", features = ["sync"] }
 rand = "0.8.5"
