--- a/piston_shared/Cargo.toml
+++ b/piston_shared/Cargo.toml
@@ -1,12 +1,9 @@
 [package]
-name = "piston_ipc"
+name = "piston_shared"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-interprocess = "1.2.1"
-piston_shared = { version = "0.1.0", path = "../piston_shared" }
 serde = { version = "1.0.197", features = ["derive"] }
-serde_json = "1.0.114"
