--- a/piston_tui/Cargo.toml
+++ b/piston_tui/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+piston_ipc = { version = "0.1.0", path = "../piston_ipc" }
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
