--- a/piston_ipc/Cargo.toml
+++ b/piston_ipc/Cargo.toml
@@ -10,3 +10,6 @@ interprocess = "1.2.1"
 piston_shared = { version = "0.1.0", path = "../piston_shared" }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
+tokio = { version = "1.36.0", features = ["net", "macros", "rt-multi-thread"] }
+tokio-serde = { version = "0.9.0", features = ["json"] }
+tokio-util = { version = "0.7.10", features = ["codec"] }
