--- a/piston_tui/Cargo.toml
+++ b/piston_tui/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+futures = "0.3.30"
 piston_ipc = { version = "0.1.0", path = "../piston_ipc" }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
+tokio = { version = "1.36.0", features = ["net", "macros", "rt-multi-thread"] }
+tokio-serde = { version = "0.9.0", features = ["json"] }
+tokio-util = { version = "0.7.10", features = ["codec"] }
