--- a/piston_ipc/Cargo.toml
+++ b/piston_ipc/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 interprocess = "1.2.1"
+lazy_static = "1.4.0"
 piston_shared = { version = "0.1.0", path = "../piston_shared" }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
