--- a/piston_tui/Cargo.toml
+++ b/piston_tui/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+crossterm = "0.27.0"
 piston_ipc = { version = "0.1.0", path = "../piston_ipc" }
+ratatui = "0.26.1"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
